plugins {
	alias(libs.plugins.java)
	alias(libs.plugins.sonarqube)
	alias(libs.plugins.spotless)
}

defaultTasks 'clean', 'spotlessApply', 'build'

repositories {
	mavenCentral()
}

subprojects {
	apply plugin: 'java'

	java {
		sourceCompatibility = JavaVersion.VERSION_17
		targetCompatibility = JavaVersion.VERSION_17
	}

	repositories {
		mavenCentral()
	}

	// https://aws.amazon.com/blogs/developer/tuning-the-aws-java-sdk-2-x-to-reduce-startup-time/
	configurations.configureEach {
		exclude group:"software.amazon.awssdk", module: "apache-client"
		exclude group:"software.amazon.awssdk", module: "netty-nio-client"
		exclude group:"software.amazon.awssdk", module: "url-connection-client"
		exclude group:"org.apache.tika", module: "tika-parser-pdf-module"
	}

	configurations.all {
		exclude group: "org.eclipse.angus", module: "smtp"
		exclude group: "org.eclipse.angus", module: "angus-mail"
		resolutionStrategy.eachDependency { DependencyResolveDetails details ->
			if (details.requested.group == 'io.netty') {
				details.useVersion "4.2.10.Final"
				details.because 'Vulnerability fix: force Netty version to override vulnerable transitive dependency from pact'
			}
		}
	}

	dependencies {
		implementation(platform(libs.aws.sdk.bom))
		implementation(libs.aws.crt.client)

		implementation(libs.aspectjrt)
		implementation(libs.bundles.logging)

		testImplementation 'org.junit.platform:junit-platform-launcher:1.14.1'
	}

	test {
		filter {
			excludeTestsMatching "uk.gov.di.ipv.cri.kbv.acceptancetest.journey.*"
		}
	}

	tasks.register("pactTests", Test) {
		useJUnitPlatform {
			includeTags 'Pact'
		}
	}

	tasks.matching { it.name == "jacocoTestReport" }.configureEach {
		dependsOn test
		reports {
			xml.required.set(true)
		}
	}

	test {
		useJUnitPlatform ()
		finalizedBy(tasks.matching { it.name == 'jacocoTestReport' })
	}
}

sonar {
	properties {
		property "sonar.projectKey", "ipv-cri-kbv-api"
		property "sonar.organization", "govuk-one-login"
		property "sonar.host.url", "https://sonarcloud.io"
	}
}

spotless {
	java {
		target "**/src/**/*.java"
		googleJavaFormat("1.17.0").aosp()
		importOrder "", "javax", "java", "\\#"
		endWithNewline()
	}
	groovyGradle {
		target '**/*.gradle'
		greclipse()
		trimTrailingWhitespace()
		endWithNewline()
	}
}

clean.doFirst {
	delete "${rootDir}/dist/"
	delete "${rootDir}/.aws-sam"
}

gradle.projectsEvaluated {
	tasks.withType(JavaCompile).tap {
		configureEach {
			options.compilerArgs << "-Xlint:unchecked"
		}
	}
}

tasks.build {
	dependsOn("spotlessApply")
}
